/**
 * User interface.
 */
export interface IUser {
    firstName: string,
    lastName: string,
    uid: string,
    lastSeen: number
}
