/**
 * Unit interface.
 */
export default interface IUnit {
    unit: string;
    value: number;
}
